@@ -1,10 +1,6 @@
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = \
 	vex \
 	src \
 	utilities
-
-DIST_SUBDIRS = \
-	vex \
-	src \
-	utilities
-
